fix(comp:tooltip): tooltip content should wrap on line break (#1876)

--- a/packages/components/tooltip/theme/dark.css
+++ b/packages/components/tooltip/theme/dark.css
@@ -4,4 +4,5 @@
   --ix-tooltip-color: #808999;
   --ix-tooltip-min-width: 32px;
   --ix-tooltip-max-width: 400px;
+  --ix-tooltip-white-space: pre-wrap;
 }
