--- a/packages/components/tooltip/theme/default.css
+++ b/packages/components/tooltip/theme/default.css
@@ -4,4 +4,5 @@
   --ix-tooltip-color: #6f7785;
   --ix-tooltip-min-width: 32px;
   --ix-tooltip-max-width: 400px;
+  --ix-tooltip-white-space: pre-wrap;
 }
